@@ -2504,8 +2504,8 @@ static char *YhourstatHelp[] = {
 
 static char *YdaystatHelp[] = {
     "NAME",
-    "    ydaymin, ydaymax, ydaysum, ydaymean, ydayavg, ydayvar, ydaystd - ",
-    "    Multi-year daily statistical values",
+    "    ydaymin, ydaymax, ydaysum, ydaymean, ydayavg, ydaystd, ydaystd1, ydayvar, ",
+    "    ydayvar1 - Multi-year daily statistical values",
     "",
     "SYNOPSIS",
     "    <operator>  ifile ofile",
@@ -2537,14 +2537,30 @@ static char *YdaystatHelp[] = {
     "              o(001,x) = avg{i(t,x), day(i(t)) = 001}",
     "                               ...",
     "              o(366,x) = avg{i(t,x), day(i(t)) = 366}",
-    "    ydayvar   Multi-year daily variance",
-    "              o(001,x) = var{i(t,x), day(i(t)) = 001}",
-    "                               ...",
-    "              o(366,x) = var{i(t,x), day(i(t)) = 366}",
     "    ydaystd   Multi-year daily standard deviation",
+    "              Divisor is n. ",
+    "              ",
     "              o(001,x) = std{i(t,x), day(i(t)) = 001}",
     "                               ...",
     "              o(366,x) = std{i(t,x), day(i(t)) = 366}",
+    "    ydaystd1  Multi-year daily standard deviation",
+    "              Divisor is (n-1). ",
+    "              ",
+    "              o(001,x) = std1{i(t,x), day(i(t)) = 001}",
+    "                               ...",
+    "              o(366,x) = std1{i(t,x), day(i(t)) = 366}",
+    "    ydayvar   Multi-year daily variance",
+    "              Divisor is n. ",
+    "              ",
+    "              o(001,x) = var{i(t,x), day(i(t)) = 001}",
+    "                               ...",
+    "              o(366,x) = var{i(t,x), day(i(t)) = 366}",
+    "    ydayvar1  Multi-year daily variance",
+    "              Divisor is (n-1). ",
+    "              ",
+    "              o(001,x) = var1{i(t,x), day(i(t)) = 001}",
+    "                               ...",
+    "              o(366,x) = var1{i(t,x), day(i(t)) = 366}",
     NULL
 };
 
